Release-1.6.0 (Released September 08, 2014)
-------------------------------------------
- BUG#19611879: msi distribution package sets wrong permissions on installed dir
- BUG#18543913: allow health report for list of slaves
- BUG#14163181: mysqlprocgrep needs to show killed processes
- WL#6260: show privileges for objects
- WL#6187: Binary log relocate

Release-1.5.2 (Released September 03, 2014)
-------------------------------------------
- BUG#19380635: add separated CHANGES & README Fabric files to Commercial dist
- BUG#19303700: mysqlserverclone does not check for low free space
- BUG#19302898: mysqldbcopy fails when views contain sub-views not yet copied
- BUG#19320164: mysqldbcompare --disable-binary-logging not working properly
- BUG#19259597: changing audit log policy fails using 5.6.21 server
- BUG#19238432: utilities do not parse proxy and stored routines grant statements
- BUG#19174364: mysqldbcompare crashes with python error
- BUG#18958536: mut does not kill mysqld processes on MAC OS X
- BUG#18753983: --skip-innodb option ignored in 5.7 servers
- BUG#18632836: --skip-table-options does not work when difftype=sql
- BUG#18304845: mysqldbcompare needs more privileges than documented

Release 1.5.1 (Released July 25, 2014)
-----------------------------------------

- BUG#19262669: README.txt, --version, and --help updates for 1.5.1
- BUG#19215979: Fix compatibility with Connector/Python 2.0
- BUG#19009690: AttributeError using mysqlfailover utility
- BUG#18914270: importerror: cannot import name ... 1.5.0

Release 1.4.4 (Released July 11, 2014)
-----------------------------------------

- BUG#17957509: ReadMe and License files are lost after OSX installer finish
- BUG#18379971: mysqlfailover consumes excessive cpu
- BUG#18442315: mysqldiff fails to consider order of index
- BUG#18603598: does not warn against passwords on the command line
- BUG#18603715: mysqlreplicate - default password hardcoded to rpl