@@ -15,7 +15,7 @@
 {\pgdsc0\pgdscuse195\pgwsxn12240\pghsxn15840\marglsxn1440\margrsxn1440\margtsxn1440\margbsxn1440\pgdscnxt0 Default;}}
 \formshade{\*\pgdscno0}\paperh15840\paperw12240\margl1440\margr1440\margt1440\margb1440\sectd\sbknone\sectunlocked1\pgndec\pgwsxn12240\pghsxn15840\marglsxn1440\margrsxn1440\margtsxn1440\margbsxn1440\ftnbj\ftnstart1\ftnrstcont\ftnnar\aenddoc\aftnrstcont\aftnstart1\aftnnrlc
 \pgndec\pard\plain \s20\ql\widctlpar\faauto\li0\ri0\lin0\rin0\fi0\ltrpar{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\cf0\dbch\af10\langfe1033\dbch\af13\afs22\alang1025\kerning1\loch\f5\fs22\lang1033\ql\widctlpar\faauto\li0\ri0\lin0\rin0\fi0{\b\langfe1033\dbch\af13\afs22\alang1025\rtlch \ltrch\loch\fs16\lang1033\loch\f8
-MySQL Utilities version v1.5}
+MySQL Utilities version v1.6}
 \par \pard\plain \s20\ql\widctlpar\faauto\li0\ri0\lin0\rin0\fi0\ltrpar{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\cf0\dbch\af10\langfe1033\dbch\af13\afs22\alang1025\kerning1\loch\f5\fs22\lang1033\ql\widctlpar\faauto\li0\ri0\lin0\rin0\fi0{\b\langfe1033\dbch\af13\afs22\alang1025\rtlch \ltrch\loch\fs16\lang1033\loch\f8
 Copyright (c) 2012, 2014 Oracle and/or its affiliates. All rights reserved.}
 \par \pard\plain \s20\ql\widctlpar\faauto\li0\ri0\lin0\rin0\fi0\ltrpar{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\cf0\dbch\af10\langfe1033\dbch\af13\afs22\alang1025\kerning1\loch\f5\fs22\lang1033\ql\widctlpar\faauto\li0\ri0\lin0\rin0\fi0\langfe1033\dbch\af13\afs22\alang1025\rtlch \ltrch\loch\fs16\lang1033\loch\f8
