@@ -1,4 +1,4 @@
-MySQL Utilities 1.5
+MySQL Utilities 1.6
 
 Copyright (c) 2011, 2014, Oracle and/or its affiliates. All rights reserved.
 
