@@ -322,7 +322,7 @@ class BuiltCommercial(bdist):
              'README_Utilities_com.txt'),
             (os.path.join(comm_path, 'LICENSE_com.txt'), 'LICENSE_com.txt'),
             ('CHANGES.txt', 'CHANGES_Utilities.txt'),
-            ('README_Fabric.txt', 'README_Fabric.txt'),
+            ('README_Fabric_com.txt', 'README_Fabric_com.txt'),
             ('CHANGES_Fabric.txt', 'CHANGES_Fabric.txt')
         ]
         copy_tree(self.bdist_dir, self.dist_target)
