@@ -41,13 +41,21 @@ COPYRIGHT_FULL_COM = [
 ]
 
 COMMERCIAL_LICENSE_NOTICE = """
-This is a release of MySQL Utilities, the dual-license, complete 
-database modeling, administration and development program for MySQL. 
-For the avoidance of doubt, this particular copy of the software is 
-released under the version 2 of the GNU General Public License. 
-MySQL Utilities is brought to you by the MySQL team at Oracle.
+This is a release of MySQL Utilities, Oracle's dual-license
+MySQL Utilities complete database modeling, administration and
+development program for MySQL. For the avoidance of doubt, this
+particular copy of the software is released under a commercial
+license and the GNU General Public License does not apply.
+MySQL Utilities is brought to you by Oracle.
 
 Copyright (c) 2011, {0}, Oracle and/or its affiliates. All rights reserved.
+
+For more information MySQL Utilities, visit
+  http://www.mysql.com/products/enterprise/utilities.html
+For more downloads visit
+  http://www.mysql.com/downloads/
+
+License information can be found in the LICENSE_Utilities.txt file.
 
 This distribution may include materials developed by third
 parties. For license and attribution notices for these
